--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "trumbowyg": "^2.3.0"
+    "trumbowyg": "hkmogu/trumbowyg"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.0",
